--- a/inde.html
+++ b/inde.html
@@ -17,7 +17,7 @@
     </section>
     
     <section id="personal-image">
-        <img src="IMG_20240823_210943_918.jpeg" alt="A picture of Earlin Jan H. Paasa" width="300" height="300">
+        <img src="IMG_20240823_210943_918.jpg" alt="A picture of Earlin Jan H. Paasa" width="300" height="300">
     </section>
     
     <footer>
